[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pacstl-lcss"
version = "0.1.0"
description = "LCSS-based trajectory similarity and pacSTL implementation"
authors = [
    { name = "Elizabeth Dietrich", email = "eadietri@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "numba>=0.58",
    "tqdm>=4.65",
    "networkx>=3.0",
    "cvxpy>=1.4",
    "gurobipy==12.0.1",
    "shoeboxpy @ git+https://github.com/incebellipipo/shoeboxpy.git",
    "skadipy @ git+https://github.com/incebellipipo/skadipy.git"
]

[tool.setuptools.packages.find]
where = ["."]