[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pacstl-lcss"
version = "0.1.0"
description = "pacSTL demonstration implementation"
authors = [
    { name = "Elizabeth Dietrich", email = "eadietri@berkeley.edu" },
    { name = "Hanna Krasowski", email = "krasowski@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.packages.find]
where = ["."]